[package]
categories = ["database-driver"]
description = "A collection of db drivers for the lunatic runtime"
edition = "2021"
keywords = ["database", "db", "mysql", "postgres", "redis"]
license = "Apache-2.0/MIT"
name = "lunatic-db"
readme = "Readme.md"
repository = "https://github.com/lunatic-solutions/submillisecond"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic-redis = {path = "lunatic-redis"}
mysql = {path = "mysql"}

[workspace]
members = ["mysql", "lunatic-redis"]

[profile.bench]
debug = true

[dev-dependencies]
lunatic = {path = "../rust-lib"}
lunatic-db = {path = "."}
serde = {version = "1.0.132", features = ["derive"]}

[[example]]
name = "redis-queues"
path = "lunatic-redis/examples/queues.rs"

[[example]]
name = "redis-set-mget"
path = "lunatic-redis/examples/set-mget.rs"

[[example]]
name = "redis-pub-sub"
path = "lunatic-redis/examples/pub-sub.rs"
