[package]
authors = ["blackbeam"]
build = "build.rs"
categories = ["database"]
description = "Mysql client library implemented in rust"
documentation = "https://docs.rs/mysql"
edition = "2021"
exclude = ["tests/*", ".*", "Makefile"]
keywords = ["database", "sql"]
license = "MIT/Apache-2.0"
name = "mysql"
repository = "https://github.com/blackbeam/rust-mysql-simple"
version = "22.2.0"

[lib]
name = "mysql"
path = "src/lib.rs"

[features]
buffer-pool = []
default = [
  #   "native-tls", # It is necessary to choose one of `flate2` backends.
  "flate2/default", # set of enabled-by-default mysql_common features
  "mysql_common/bigdecimal03",
  "mysql_common/rust_decimal",
  "mysql_common/time03",
  "mysql_common/uuid",
  "mysql_common/frunk", # use global buffer pool by default
  "buffer-pool",
]
nightly = []
rustls-tls = ["rustls", "webpki", "webpki-roots", "rustls-pemfile"]

[dev-dependencies]
frunk = "0.4"
lazy_static = "1.4.0"
rand = "0.8.2"
serde_derive = "1"
time = "0.3"

[dependencies]
bufstream = "~0.1"
bytes = "1.0.1"
crossbeam = "0.8.1"
flate2 = {version = "1.0", default-features = false}
io-enum = "1.0.0"
lru = "0.7"
lunatic = {path = "../../rust-lib"}
mysql_common = {version = "0.28.0", default-features = false}
once_cell = "1.7.2"
pem = "1.0.1"
percent-encoding = "2.1.0"
serde = "1"
serde_json = "1"
twox-hash = "1"
url = "2.1"

# [dependencies.native-tls]
# optional = true
# version = "0.2.3"

[dependencies.rustls]
features = ["dangerous_configuration"]
optional = true
version = "0.20.0"

[dependencies.rustls-pemfile]
optional = true
version = "1.0.0"

[dependencies.webpki]
optional = true
version = "0.22.0"

[dependencies.webpki-roots]
optional = true
version = "0.22.1"
