[package]
description = "Redis driver for Rust."
documentation = "https://docs.rs/redis"
edition = "2018"
homepage = "https://github.com/redis-rs/redis-rs"
keywords = ["redis", "database"]
license = "BSD-3-Clause"
name = "redis"
repository = "https://github.com/redis-rs/redis-rs"
rust-version = "1.57"
version = "0.21.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# These two are generally really common simple dependencies so it does not seem
# much of a point to optimize these, but these could in theory be removed for
# an indirection through std::Formatter.
itoa = "1.0"
ryu = "1.0"
serde = {version = "1.0", features = ["derive"]}

# lunatic dependency
lunatic = {path = "../../rust-lib"}

# This is a dependency that already exists in url
percent-encoding = "2.1"

# We need this for redis url parsing
url = "2.1"

# We need this for script support
sha1_smol = {version = "1.0", optional = true}

combine = {version = "4.6", default-features = false, features = ["std"]}

# Only needed for AIO
bytes = {version = "1", optional = true}
futures-util = {version = "0.3.15", default-features = false, optional = true}
pin-project-lite = {version = "0.2", optional = true}
tokio = {version = "1", features = ["rt", "net"], optional = true}
tokio-util = {version = "0.7", optional = true}

# Only needed for the connection manager
arc-swap = {version = "1.1.0", optional = true}
futures = {version = "0.3.3", optional = true}

# Only needed for the r2d2 feature
r2d2 = {version = "0.8.8", optional = true}

# Only needed for cluster
crc16 = {version = "0.4", optional = true}
rand = {version = "0.8", optional = true}
# Only needed for async_std support
async-std = {version = "1.8.0", optional = true}
async-trait = {version = "0.1.24", optional = true}

# Only needed for TLS
async-native-tls = {version = "0.4", optional = true}
native-tls = {version = "0.2", optional = true}
tokio-native-tls = {version = "0.3", optional = true}

# Optional aHash support
ahash = {version = "0.7.6", optional = true}

[features]
acl = []
aio = [
  "bytes",
  "pin-project-lite",
  "futures-util",
  "futures-util/alloc",
  "futures-util/sink",
  "tokio/io-util",
  "tokio-util",
  "tokio-util/codec",
  "tokio/sync",
  "combine/tokio",
  "async-trait",
]
async-std-comp = ["aio", "async-std"]
async-std-tls-comp = ["async-std-comp", "async-native-tls", "tls"]
cluster = ["crc16", "rand"]
connection-manager = ["arc-swap", "futures", "aio"]
default = ["acl", "streams", "geospatial", "script"]
geospatial = []
script = ["sha1_smol"]
streams = []
tls = ["native-tls"]
tokio-comp = ["aio", "tokio", "tokio/net"]
tokio-native-tls-comp = ["tls", "tokio-native-tls"]

[dev-dependencies]
assert_approx_eq = "1.0"
criterion = "0.3"
fnv = "1.0.5"
futures = "0.3"
partial-io = {version = "0.5", features = ["tokio", "quickcheck1"]}
quickcheck = "1.0.3"
rand = "0.8"
socket2 = "0.4"
tempfile = "3.2"
tokio = {version = "1", features = ["rt", "macros", "rt-multi-thread", "time"]}

[[test]]
name = "test_async"
required-features = ["tokio-comp"]

[[test]]
name = "test_async_async_std"
required-features = ["async-std-comp"]

[[test]]
name = "parser"
required-features = ["aio"]

[[test]]
name = "test_acl"

[[bench]]
harness = false
name = "bench_basic"
required-features = ["tokio-comp"]

[[bench]]
harness = false
name = "bench_cluster"
required-features = ["cluster"]

[[example]]
name = "async-multiplexed"
required-features = ["tokio-comp"]

[[example]]
name = "async-await"
required-features = ["aio"]

[[example]]
name = "async-pub-sub"
required-features = ["aio"]

[[example]]
name = "async-scan"
required-features = ["aio"]

[[example]]
name = "async-connection-loss"
required-features = ["connection-manager"]

[[example]]
name = "streams"
required-features = ["streams"]
